--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.19)
 project(nativize-qtwebengine LANGUAGES CXX)
 
-find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)
+find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets WebEngineWidgets)
 
 qt_standard_project_setup()
 
@@ -16,6 +16,7 @@ target_link_libraries(nativize-qtwebengine
     PRIVATE
         Qt::Core
         Qt::Widgets
+        Qt::WebEngineWidgets
 )
 
 include(GNUInstallDirs)
